<resources>
    <string name="app_name">Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="app_description">Aplicativo para cadastro de produtos</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="register_now">Novo por aqui? Cadastre-se agora</string>
    <string name="registration">Cadastro</string>
    <string name="register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="my_products">Meu produtos</string>
    <string name="logout">logout</string>
    <string name="create_new_product">Criar novo produto</string>
    <string name="initial_image">Imagem inicial</string>
    <string name="no_products">Você ainda não possui nenhum produto cadastrado</string>
    <string name="register_product_now">Cadastrar agora</string>
    <string name="image">image</string>
    <string name="description">Descrição</string>
    <string name="more_vertical">Menu Vertical</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="product_deleted">Product successfully deleted!</string>
    <string name="orange">Laranja</string>
    <string name="name_field_hint">Ex: Laranja</string>
    <string name="description_field_hint">Ex: A laranja é laranja.</string>
    <string name="image_hint">Imagem (Clique cima para anexar)</string>
    <string name="create_product">Criar produto</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="limit_max_of_caracter">O limite máximo de caracteres é: %1$d</string>
</resources>